<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialogue_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/transfer_car_title"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialogue_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_2sdp"
        android:text="@string/transfer_car_subtitle"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogue_title" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogue_subtitle">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/_56sdp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_regular"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/yes_text"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/_56sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorWhite"
            android:fontFamily="@font/ubuntu_regular"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/no_text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="0dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="@dimen/_1sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>