<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    tools:context=".fragments.vehicle.AddRecordFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:contentDescription="@null"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/top_logo_image"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_24sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/ic_text_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_32sdp"
            android:background="@color/colorBlack"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:text="@string/title_add_new_record"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

        <TextView
            android:id="@+id/top_subtitle_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_48sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:text="@string/add_new_record_subtitle_text"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_logbook_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/update_logbook_text"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="0dp"
            app:layout_constraintTop_toBottomOf="@id/top_subtitle_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_service_button"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_service_text"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="0dp"
            app:layout_constraintTop_toBottomOf="@id/update_logbook_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_maintenance_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_maintenance_text"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="0dp"
            app:layout_constraintTop_toBottomOf="@id/add_service_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/transfer_vehicle_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/transfer_vehicle_text"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="0dp"
            app:layout_constraintTop_toBottomOf="@id/add_maintenance_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>